# Benchmarking-vision-based-robotic-manipulation

./: README.md
Algorithms/Cavity_Detection/: CMakeLists.txt  main.cpp
Algorithms/Cavity_Detection/Media/: boundary.pcd  filtered.pcd  inner_1.pcd  inner_2.pcd  object.pcd  outer.pcd
Media/: Scene_with_boundary_grasp_points.pcd  boundary_1.pcd  boundary_10.pcd  boundary_11.pcd  boundary_12.pcd  boundary_2.pcd  boundary_3.pcd  boundary_4.pcd  boundary_5.pcd  boundary_6.pcd  boundary_7.pcd  boundary_8.pcd  boundary_9.pcd  geometric_grasp_point_1.pcd  geometric_grasp_point_10.pcd  geometric_grasp_point_11.pcd  geometric_grasp_point_12.pcd  geometric_grasp_point_2.pcd  geometric_grasp_point_3.pcd  geometric_grasp_point_4.pcd  geometric_grasp_point_5.pcd  geometric_grasp_point_6.pcd  geometric_grasp_point_7.pcd  geometric_grasp_point_8.pcd  geometric_grasp_point_9.pcd  heuristic_grasp_point_1.pcd  heuristic_grasp_point_10.pcd  heuristic_grasp_point_11.pcd  heuristic_grasp_point_12.pcd  heuristic_grasp_point_2.pcd  heuristic_grasp_point_3.pcd  heuristic_grasp_point_4.pcd  heuristic_grasp_point_5.pcd  heuristic_grasp_point_6.pcd  heuristic_grasp_point_7.pcd  heuristic_grasp_point_8.pcd  heuristic_grasp_point_9.pcd  object_1.pcd  object_10.pcd  object_11.pcd  (+9 more)
Media/install/: local_setup.sh  setup.sh
Media/log/: latest_build
src/: main.cpp
urdf/: camera.urdf
worlds/: simulation.world
